--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <a href="#" aria-label="Facebook" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878V14.89h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v7.028C18.343 21.128 22 16.991 22 12z"/></svg>
             </a>
-            <a href="https://www.instagram.com/sri_infinity_convention_/" aria-label="Instagram" target="_blank">
+            <a href="#" aria-label="Instagram" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.416 2.175 8.796 2.163 12 2.163zm0 1.802c-3.149 0-3.518.01-4.745.068-2.68.122-3.868 1.309-3.99 3.99-.058 1.227-.068 1.597-.068 4.745s.01 3.518.068 4.745c.122 2.68 1.31 3.868 3.99 3.99 1.227.058 1.597.068 4.745.068s3.518-.01 4.745-.068c2.68-.122 3.868-1.309 3.99-3.99.058-1.227.068-1.597.068-4.745s-.01-3.518-.068-4.745c-.122-2.68-1.31-3.868-3.99-3.99-1.227-.058-1.597-.068-4.745-.068zm0 5.838a4.198 4.198 0 100 8.396 4.198 4.198 0 000-8.396zM12 18a2.198 2.198 0 110-4.396 2.198 2.198 0 010 4.396zm4.664-9.338a1.2 1.2 0 100 2.4 1.2 1.2 0 000-2.4z"/></svg>
             </a>
             <a href="#" aria-label="Twitter" target="_blank">
