--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             background-color: var(--dark-bg);
         }
 
-        .section:nth-of-type(odd) {
+        .section:nth-of-type(even) {
             background-color: var(--secondary-dark);
         }
 
@@ -356,6 +356,25 @@
             filter: brightness(1.1);
         }
         
+        /* --- Map Section --- */
+        .map-container {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 50%; /* 2:1 Aspect Ratio */
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .map-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+        
         /* --- Footer --- */
         .footer {
             background: #000;
@@ -472,6 +491,7 @@
                 </div>
             </div>
             <a href="#gallery">Gallery</a>
+            <a href="#location">Location</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -539,6 +559,21 @@
         </div>
     </section>
 
+    <section id="location" class="section">
+        <h2 class="section-title">Find Us Here</h2>
+        <div class="map-container hidden">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.473551532892!2d78.3705625!3d17.388151999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb950462057777%3A0x88944111245c57b3!2sSri%20Infinity%20Convention!5e0!3m2!1sen!2sin!4v1722933653139!5m2!1sen!2sin" 
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </section>
+
     <footer id="contact" class="footer">
         <div class="footer-logo">SRI INFINITY CONVENTION</div>
         <p>Manikonda, Hyderabad, Telangana, 500089</p>
@@ -549,7 +584,9 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878V14.89h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v7.028C18.343 21.128 22 16.991 22 12z"/></svg>
             </a>
             <a href="https://www.instagram.com/sri_infinity_convention_/" aria-label="Instagram" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.416 2.175 8.796 2.163 12 2.163zm0 1.802c-3.149 0-3.518.01-4.745.068-2.68.122-3.868 1.309-3.99 3.99-.058 1.227-.068 1.597-.068 4.745s.01 3.518.068 4.745c.122 2.68 1.31 3.868 3.99 3.99 1.227.058 1.597.068 4.745.068s3.518-.01 4.745-.068c2.68-.122 3.868-1.309 3.99-3.99.058-1.227.068-1.597.068-4.745s-.01-3.518-.068-4.745c-.122-2.68-1.31-3.868-3.99-3.99-1.227-.058-1.597-.068-4.745-.068zm0 5.838a4.198 4.198 0 100 8.396 4.198 4.198 0 000-8.396zM12 18a2.198 2.198 0 110-4.396 2.198 2.198 0 010 4.396zm4.664-9.338a1.2 1.2 0 100 2.4 1.2 1.2 0 000-2.4z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" />
+                </svg>
             </a>
             <a href="#" aria-label="Twitter" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
@@ -584,7 +621,3 @@
 
 </body>
 </html>
-
-
-
-
